infra/k8s/dev/backend/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-svc
  namespace: dev
  labels:
    app: backend

spec:
  type: ClusterIP

  selector:
    app: backend

  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
